termino del proyecto

--- a/index1.css
+++ b/index1.css
@@ -1,6 +1,16 @@
 .text-platzi{
     color: #97c93e !important;
 }
+
+.btn-platzi{
+    background-color: #97c93e ;
+    color: white;
+}
+
+.btn-platzi:hover {
+    background-color: #82ad36;
+}
+
 #header img{
     width: 80px;
 }
@@ -28,6 +38,14 @@
 #carousel .overlay .container,
 #carousel .overlay .row {
     height: 100%;
+}
+
+#place-time {
+    background-color:#343a40 ;
+    color: white;
+}
+#place-time img {
+    max-width: 100%;
 }
 
 #footer {
