integre fotos y estructure mejor la pagina

--- a/index.css
+++ b/index.css
@@ -40,11 +40,11 @@
     height: 100%;
 }
 
-#place-time {
+#ultimas-rodadas {
     background-color:#343a40 ;
     color: white;
 }
-#place-time img {
+#ultimas-rodadas img {
     max-width: 100%;
 }
 
