--- a/views/index.twig
+++ b/views/index.twig
@@ -1,22 +1,11 @@
+{% extends "layoutindex.twig" %}
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="index2.css">
-    <title>alffaGayala</title>
-  </head>
-  <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="50">
-
-    <!-- Inicio Header -->
+{% block content %}
+ <!-- Inicio Header -->
     <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ">
         <div class="container">
             
-                <a class="navbar-brand" href="index.php">
+                <a class="navbar-brand" href="/boot/">
                     <img src="public/assets/images/alffa-logo.png" alt="alffa Logo">
                     Proyecto Jubilatorio
                 </a>
@@ -39,6 +28,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-platzi" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Comprar camisetas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/boot/login">Login</a>
                         </li>
                     </ul>
                     
@@ -150,17 +142,19 @@
 
 <section id="ultimas-rodadas">
     <div class="container-fluid">
-        <?php
-        $totalMonths = 0;
-        echo count($rodadas);
-        for ($idx=0;$idx<count($rodadas);$idx++){
-            $totalMonths += $rodadas[$idx]->months;
-            if($totalMonths>$limitMonths){
-                break;
-            }
-            printRodada($rodadas[$idx]);
-        };
-        ?>
+        {% for rodada in rodadas %}
+            <div class="row">
+                    <div class="col-12 col-lg-6 pe-0 ps-0">
+                        <img src="{{ rodada.imagen }}" alt="{{ rodada.tituloabr }}">
+                    </div>
+                <div class="col-12 col-lg-6 pt-2 pb-4 pt-4">
+                            <h2>{{ rodada.titulo }}</h2>
+                            <h2>{{ rodada.getDurationAsString() }}</h2>
+                            <p><abbr title="{{ rodada.abbr }}" data-bs-toggle="tooltip">{{ rodada.tituloabbr }}</abbr> {{ rodada.descripcion }}</p>
+                            <a href="{{ rodada.conocemas }}" target="_blank" class="btn btn-platzi btn-block" >Conoce más</a>
+                </div>
+            </div>
+        {% endfor %}
     </div>
 </section>
 
@@ -183,6 +177,18 @@
                 printPatrocinador($patrocinadores[$idx]);
             }
             ?>
+            {% for patrocinador in patrocinadores %}
+                <div class="col">
+                    <div class="card" style="width: 18rem; margin: 0 auto;">
+                        <img src="{{ patrocinador.imagen }}" class="card-img-top" alt="...">   
+                        <h6> {{ patrocinador.getDurationAsString() }}</h6> 
+                        <div class="alert alert-success" role="alert">
+                             {{ patrocinador.descripcion }}   
+                        </div>
+                        
+                    </div>
+                </div>
+            {% endfor %}
             
         </div>
     
@@ -261,16 +267,4 @@
     </footer>
 <!-- Fin Footer -->
 <hr>
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-    <script src="index.js"></script>
-</body>
-</html>
+{% endblock %}
