--- a/views/index.twig
+++ b/views/index.twig
@@ -30,6 +30,9 @@
                             <a class="nav-link text-platzi" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Comprar camisetas</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/boot/blog">Curriculum Vitae</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/boot/login">Login</a>
                         </li>
                     </ul>
@@ -42,7 +45,7 @@
     <!-- Fin Header -->
 
     <!-- carrusel inicio -->
-    <section id="main" class="h-100">
+    <section id="main" class="h-100" >
         <div id="carousel" class="carousel slide " data-bs-ride="carousel" data-bs-pause=“false”>
             <div class="carousel-inner">
                 <div class="carousel-item active">
