--- a/views/layoutindex.twig
+++ b/views/layoutindex.twig
@@ -9,6 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="public/index.css">
     <title>alffaGayala</title>
+  <style>
+      body {
+          margin-top: 57px;
+          margin-left: 10px;
+        }
+  </style>
   </head>
   <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="50">
         {% block content %}
