--- a/views/blog.twig
+++ b/views/blog.twig
@@ -63,16 +63,30 @@
         <h2 class="border-bottom-gray" >Resumen de mi carrera</h2>
         <p>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Soy egresado de la carrera de Ingenieria en Computacion de la Universidad Autonoma de Guadalajara, toda mi vida laboral la he desempeñado en sector Público Federal, particularmente en la Comsion Federal de Eléctricidad en la Central 
-          Hidroeléctrica Aguamilpa Solidaridad. Mi plaza en la paraestatal esta en el Departamento de Hidrometría aunque en los primeros de años de trayectoria laboral los ejercí en el departamento de Informática ya que en dicho departamento
+          Hidroeléctrica Aguamilpa Solidaridad.
+        </p>
+        <div class="card bg-dark text-black" style="width: 35rem;  margin: auto;">
+          <img src="public/assets/images/miGeneracion.jpeg" class="card-img" alt="...">
+          <div class="card-img-overlay">
+            <h5 class="card-title">Generación 1993 Ing. En Computación</h5>
+            <p class="card-text">Generación Ing. Luis Jorge Aguilera Casillas.</p>
+          </div>
+        </div>
+
+         <p>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mi plaza en la paraestatal esta en el Departamento de Hidrometría aunque en los primeros de años de trayectoria laboral los ejercí en el departamento de Informática ya que en dicho departamento
           era necesario el desarrollo de un sistema para la clasificación de documentos del archivo muerto de la entrega-recepción de la presa en construccion a la puesta en operacion. Era un mundo de documentos, entre planos arquitectónicos,
           manuales de los equipos, documentos legales, expropiacion de tierras, indemnizaciones por las tierras expropiadas y un largo etc.
-        </p>
-        <div class="card bg-dark text-white" style="width: 60rem;">
-          <img src="public/assets/images/aguamilpa1994.jpg" class="card-img" alt="...">
+          </p>
+        <div class="card bg-dark text-black" style="width: 35rem;  margin: auto;">
+          <img src="public/assets/images/luluYyo.jpeg" class="card-img" alt="...">
           <div class="card-img-overlay">
-            <h5 class="card-title">Inicio de operación Central Hidrolectrica Agaumilpa</h5>
-            <p class="card-text">21 de Julio de 1994 fue la inauguración oficial de la Central Hidroeléctrica Aguamilpa Solidaridad así como la Presa Reguladora San Rafael, la cortina de la presa Aguamilpa de 187 metros de altura, fue en su tiempo la más alta del mundo en su tipo y estaba proyectada para almacenar
-             6,950 millones de metros cúbicos, cuenta con 3 generadores de 320 MW cada uno y su casa de máquinas está construida en el interior de una montaña.</p>
+            <h5 class="card-title">Yo mero y tres compañeros de mi generación</h5>
+            <p class="card-text">Lulu Pérez, querida amiga, abrazo donde quiera que estés
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+            </svg>
+            </p>
           </div>
         </div>
        
@@ -81,8 +95,16 @@
           y un mundo de actitud ya que en esa epoca ( 90's) eramos recien egredados y teniamos nula experiencia en el desarrollo de sistemas y nuestro lider de proyectos mi queridísimo <a href="https://twitter.com/paco530227" target="_blank">Paco Aguiar @paco530227</a>, pos no, él se apoyaba mucho en nosotros;
           todo el Backend y el Frontend se hecho por mi mismo, osea yo, de hecho, si me pregustan, mi carnet de presentación y carta fuerte fué tener nociones en el desarrollo con el lenguage Clipper y su BD Dbase. 
         </p>
+        <div class="card bg-dark text-white" style="width: 35rem;  margin: auto;">
+          <img src="public/assets/images/aguamilpa1994.jpg" class="card-img" alt="...">
+          <div class="card-img-overlay">
+            <h5 class="card-title">Inicio de operación Central Hidrolectrica Agaumilpa</h5>
+            <p class="card-text">21 de Julio de 1994 fue la inauguración oficial de la Central Hidroeléctrica Aguamilpa Solidaridad así como la Presa Reguladora San Rafael, la cortina de la presa Aguamilpa de 187 metros de altura, fue en su tiempo la más alta del mundo en su tipo y estaba proyectada para almacenar
+             6,950 millones de metros cúbicos, cuenta con 3 generadores de 320 MW cada uno y su casa de máquinas está construida en el interior de una montaña.</p>
+          </div>
+        </div>
         
-        <p>
+        <p class="mt-3">
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Se terminó el sistema del Achivo muerto y el trabajo cotidiano en el departamento fue el soporte al usuario, algo tedioso y rutinario, al poco tiempo el departamento de Hidrometría reclamo a su personal, osea yo, para que ocupara y desempeñara el trabajo para el que había sido
           contratado, el lider de éste departamento en ese tiempo era el Ing. Ernesto, tipo nefasto, alcoholico y patan que afortunadamente duro poco tiempo en el puesto ya que el Ing. Gangoiti Superiontendente de la Central en ese tiempo los corrio por ebrio, en su lugar llegó el experto en hidrologia el <a href="https://www.facebook.com/search/top?q=%40alvaro.perezcarrillo" target="_blank">Lic. Alvaro Pérez Carrillo @alvaroperez</a>, que curiosamente es el economista de profesión, pero toda su vida la ha dedicado al estudio de la hidráulica.
         </p>
@@ -90,8 +112,20 @@
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cuando llegue al departamento de Hidrometría no teniamos computadoras (algo para mi completamente desilucionante) en su lugar me sentaron en un escritorio me dieron una calculadora vieja y un monton de libretas de registro hidráulicos que yo debería llenar con bolígrafo
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-frown-fill" viewBox="0 0 16 16">
             <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm-2.715 5.933a.5.5 0 0 1-.183-.683A4.498 4.498 0 0 1 8 9.5a4.5 4.5 0 0 1 3.898 2.25.5.5 0 0 1-.866.5A3.498 3.498 0 0 0 8 10.5a3.498 3.498 0 0 0-3.032 1.75.5.5 0 0 1-.683.183zM10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8z"/>
-          </svg>, si, así de arcaicos en esa epoca, aunque a la central llegó una dotación completa de computadoras, pentium 4 creo, la verdad es que los departamentos no estaban preparados para recibirlas y muco menos para utilizarlas, ahí es donde comenzo nuestro proceso de evanglizacion computacional, el departamento de informatica y un servidor ahora como agregado cultural,
+          </svg>, si, así de arcaicos en esa epoca, aunque a la central llegó una dotación completa de computadoras, pentium 4 creo, la verdad es que los departamentos no estaban preparados para recibirlas y mucho menos para utilizarlas, ahí es donde comenzo nuestro proceso de evanglizacion computacional, el departamento de informatica y un servidor ahora como agregado cultural a informatica ya que se llego a un acerdo entre el sindicato y la empresa que en tiempo de estiaje ( cuando no llueve) yo estuviera apoyando a dicho departamento,
+           esot sucedia durante la mayor parte del año ya que el tiempo de lluvias solo abarca de junio a septiembre y en casos extraodinarios hasta octubre.
            pero el lic. Alvaro, persona costeña y de costumbres arraigadas no soltaba sus carpetas y estaba un poco reacio a la modernidad
+        </p>
+        <div class="card bg-dark text-white" style="width: 35rem; margin: auto;">
+          <img src="public/assets/images/alvaroPerez.jpg" class="card-img" alt="...">
+          <div class="card-img-overlay" style="background-color: rgba(0, 0, 0, 0.13);">
+            <h5 class="card-title">Lic. Alvaro Perez en la apertura de las compuertas en el año de 2003</h5>
+            <p class="card-text">Las intensas lluvias registradas en los estados de Aguascalientes, Jalisco, Zacatecas, Durango y Nayarit ocasionaron que el día 13 de septiembre de 2003 a las 07:32 horas se abrieran por primera vez las compuertas de la Presa Aguamilpa para regular los grandes volúmenes de agua que ingresaron a su embalse; es importante destacar el profesionalismo de los Directivos, Técnicos y Trabajadores de la CFE-Central Hidroeléctrica Aguamilpa para manejar adecuadamente esas avenidas extraordinarias y de esa manera minimizar los riesgos a las poblaciones de la zona costera del río Santiago y a la infraestructura de la propia Central..</p>
+          </div>
+        </div>
+        <p class="mt-3">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;El lic. Alvaro, persona costeña y de costumbres arraigadas no soltaba sus carpetas y estaba un poco reacio a la modernidad le costaba trabajo hacer el cambio de sistema y dejar la pluma y el lapiz y por lo menos crear una hoja de calculo para comenzar a digitalizar el sistema de calculo de los datos hidraulicos, pero a pesar de todo, y esto lo digo a manera de agradecimiento, me dio rienda suelta para que yo hiciera lo que se me ocurriera con la compu asignada al departamento, en primer lugar por que
+          el no tenia ni idea de como prenderla y en segundo creo que muy en su interior sabía qu el cambio era inevitable pero no sabia como abordarlo.
         </p>
 
       </div>
@@ -99,7 +133,7 @@
     <div class="row">
       <div class="col">
         <div>
-          <h3 class="border-bottom-gray" >Work Experience</h3>
+          <h3 class="border-bottom-gray" >Experiencia de trabajo</h3>
           <ul>
           
             {% for job in jobs %}
